17. Adding padding to sections

--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -90,7 +90,7 @@ a:active {
 }
 
 .section-footer{
-    padding: var(--footer-padding);
+    padding: var(--section-footer-padding);
     text-align: var(--section-footer-align);
 }
 
