18. Customizing the navbar

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -138,6 +138,10 @@ a:active {
     text-align: center;
 }
 
+.navbar-menu{
+    float: right;
+}
+
 .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
